@@ -8,22 +8,25 @@
 #
 
 # install directory
-setenv INSTALLDIR		/usr/local/mgi/live/dataload/entrezgeneload
+setenv EGINSTALLDIR		/usr/local/mgi/live/dataload/entrezgeneload
 
 # system doc directory
-setenv SYSTEMDOCDIR		${INSTALLDIR}/system_docs
+setenv SYSTEMDOCDIR		${EGINSTALLDIR}/system_docs
 
 # data directory
-setenv DATADIR			/data/loads/entrezgene/entrezgeneload
+setenv EGDATADIR		/data/loads/entrezgene/entrezgeneload
 
 # input directory
-setenv INPUTDIR			${DATADIR}/input
+setenv EGINPUTDIR		${EGDATADIR}/input
+
+# output directory
+setenv EGOUTPUTDIR		${EGDATADIR}/output
 
 # logs directory
-setenv LOGSDIR			${DATADIR}/logs
+setenv EGLOGSDIR		${EGDATADIR}/logs
 
 # archive directory
-setenv ARCHIVEDIR		${DATADIR}/archive
+setenv EGARCHIVEDIR		${EGDATADIR}/archive
 
 # SYBASE
 setenv SYBASE	/opt/sybase/12.5
@@ -41,8 +44,7 @@ setenv DBUTILITIESPATH	/usr/local/mgi/live/dbutils/mgidbutilities
 set path = ($DBUTILITIESPATH/bin $path $SYBASE/ASE-12_5/bin $SYBASE/OCS-12_5/bin)
 
 # FTP Data Files
-setenv FTPDATA1		/data/downloads/ftp.ncbi.nih.gov/refseq/LocusLink
-setenv FTPDATA2		/data/downloads/ftp.ncbi.nih.gov/pub/HomoloGene/build36
+setenv FTPDATA1		/data/downloads/ftp.ncbi.nih.gov/gene/DATA
 
 # MGI Schema Product
 setenv MGIDBSCHEMADIR   /usr/local/mgi/live/dbutils/mgd/mgddbschema
