@@ -1,3 +1,9 @@
+TAG: entrezgeneload-tr6433-1
+DATE: 12/22/2004
+STAFF: lec
+RELEASE: A
+CHANGES: TR 6433
+
 TAG: entrezgeneload-tr6433-BP
 DATE: 12/22/2004
 STAFF: lec
